@@ -60,7 +60,7 @@ load_tabbedview = function() {
                 tabbedview.spinner.hide();
             });
             this.spinner.show();
-            
+
             },
 
         param : function(name, value) {
@@ -216,6 +216,18 @@ load_tabbedview = function() {
         e.stopPropagation();
         return false;
     });
+
+
+    /* added functionality to the morelink, change the tab in the same way,
+       like the normal tab link */
+    jq('.moreLink a').live('click', function(e){
+        tabbedview.tabs_api.click(jq(this).attr('href'));
+        location.hash = jq(this).attr('href');
+        e.preventDefault();
+        e.stopPropagation();
+        return false;
+    });
+
 
     jq('.tabbedview-tabs').tabs(
         '.panes > div.pane', {
